--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</tr>
 			<tr class="table-dark">
 				<td id="pepen">Definiton:</td>
-				<td id="pepen">Pepe coin, known for having no fundamental and intrinsic value, is the most "memeable" coin on the blockchain, is for entertainment purposes. However, it has reached the top 100 cryptocurrencies by market cap in just two weeks.</td>
+				<td id="pepen">Pepe coin, known for having no fundamental and intrinsic value, is the most "memeable" coin on the blockchain, and is for entertainment purposes. However, it has reached the top 100 cryptocurrencies by market cap in just two weeks.</td>
 			</tr>
 			<tr class="table-dark">
 				<td id="pepen">USD Value: </td>
